--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-<h1>Word Count</>
+<h2>Word Count</h2>
 
 <!This is the input form section, and the submit button afterwards>
 <form action="{%url 'count' %}">
