--- a/templates/about.html
+++ b/templates/about.html
@@ -2,3 +2,5 @@
 <h1>Not much to see here, but this site will count and analyze whatever words you give it! Enjoy! </h1>
 
 <a href="{% url 'home' %}">Start Again </a>
+
+Copyright 2021
